--- a/browser/css/toolbar.css
+++ b/browser/css/toolbar.css
@@ -414,7 +414,7 @@
 
 #closebutton {
 	width: 100%;
-	height: 100%;
+	height: 100% !important;
 	background: url('images/closedoc.svg') no-repeat center/24px !important;
 }
 
